--- a/vue/cs_players-front/package.json
+++ b/vue/cs_players-front/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-plugin-router": "^4.2.3",
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
